@@ -21,6 +21,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -90,6 +93,14 @@
                             <pattern>org.objenesis</pattern>
                             <shadedPattern>wtf.casper.storageapi.libs.objenesis</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>org.mariadb</pattern>
+                            <shadedPattern>wtf.casper.storageapi.libs.mariadb</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.sqlite</pattern>
+                            <shadedPattern>wtf.casper.storageapi.libs.sqlite</shadedPattern>
+                        </relocation>
                     </relocations>
                     <minimizeJar>false</minimizeJar>
                 </configuration>
@@ -153,6 +164,13 @@
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
             <version>3.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.43.0.0</version>
         </dependency>
 
         <!-- junit 5, unit test -->
